--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "~13.2.0",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
+    "global": "^4.4.0",
+    "http-server": "^14.1.0",
     "jwt-decode": "^3.1.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
